update mean and std

--- a/process_data.ipynb
+++ b/process_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,19 +17,23 @@
     "import numpy as np\n",
     "from os.path import join, exists\n",
     "import os\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "import json\n",
+    "\n",
+    "from PIL import Image\n",
+    "from torchvision import transforms"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\trong\\AppData\\Local\\Temp\\ipykernel_2864\\1998302472.py:1: DtypeWarning: Columns (2,3,4,7,8,9,10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\trong\\AppData\\Local\\Temp\\ipykernel_4984\\1998302472.py:1: DtypeWarning: Columns (2,3,4,7,8,9,10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  data_entry = pd.read_csv(\"Data_Entry_2017.csv\", sep=\";\")\n"
      ]
     }
@@ -40,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +185,7 @@
        "4                        0.171    0.171       NaN  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +198,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Process folder"
+    "### Process folder\n",
+    "Count how many images are there in each folder of dataset"
    ]
   },
   {
@@ -231,8 +236,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "\n",
     "with open(\"folder_size.json\", 'w') as f:\n",
     "    json.dump(folder_size, f)"
    ]
@@ -241,7 +244,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Get labels"
+    "### Get labels\n",
+    "Saved to a json file, so don't run it again"
    ]
   },
   {
@@ -300,7 +304,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Re-label image "
+    "### Re-label image \n",
+    "Assign each class with an index and then label each image with one-hot vector"
    ]
   },
   {
@@ -441,6 +446,133 @@
     "\n",
     "    img_name = img_labels_df.iloc[i,0]\n",
     "    np.save(join(test_label_path,img_name), one_label)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Process original images\n",
+    "To find out mean and standard deviation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pre_process = transforms.Compose([\n",
+    "    transforms.Resize(1024), #just in case \n",
+    "    transforms.CenterCrop(1008), #72 * batch size\n",
+    "    transforms.ToTensor(),\n",
+    "    # transforms.Normalize(mean=0.5, std=0.26)\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4999/4999 [01:40<00:00, 49.50it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5219772\n",
+      "0.22715423\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "img_folder1 = \"G:/Code/Dataset/archive/images_001/images\"\n",
+    "ttl_mean = []\n",
+    "ttl_std = []\n",
+    "for img in tqdm(os.listdir(img_folder1)):\n",
+    "    nP_Img = pre_process(Image.open(join(img_folder1,img))).detach().numpy()\n",
+    "    ttl_mean.append(np.mean(nP_Img))\n",
+    "    ttl_std.append(np.std(nP_Img))\n",
+    "\n",
+    "print(np.mean(ttl_mean))\n",
+    "print(np.mean(ttl_std))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Process image features\n",
+    "Process output from dinov2 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_feature_img = np.load(\"test.npy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 5184, 384)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_feature_img.shape \n",
+    "# 5184 = 72*72 (72 * 14 = 1008 -> center crop)\n",
+    "# 384 is feature dimension\n",
+    "# 1 is 1 image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# clear data entry since it's quite large, don't run if you didn't load it\n",
+    "import gc\n",
+    "\n",
+    "del data_entry\n",
+    "gc.collect()"
    ]
   }
  ],
