--- a/process_data.ipynb
+++ b/process_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,14 +26,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\trong\\AppData\\Local\\Temp\\ipykernel_4984\\1998302472.py:1: DtypeWarning: Columns (2,3,4,7,8,9,10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\trong\\AppData\\Local\\Temp\\ipykernel_15484\\1998302472.py:1: DtypeWarning: Columns (2,3,4,7,8,9,10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  data_entry = pd.read_csv(\"Data_Entry_2017.csv\", sep=\";\")\n"
      ]
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
        "4                        0.171    0.171       NaN  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
        " 'Consolidation': 14}"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,6 +296,9 @@
     "for label in label_map:\n",
     "    label_map[label] = c\n",
     "    c += 1\n",
+    "\n",
+    "with open(\"label_map.json\", 'w') as f:\n",
+    "    json.dump(label_map, f)\n",
     "\n",
     "label_map"
    ]
@@ -310,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +380,7 @@
        "5  00000003_000.png                  Hernia"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,9 +392,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# clear data entry since it's quite large, don't run if you didn't load it\n",
     "import gc\n",
@@ -402,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,14 +425,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 104999/104999 [00:51<00:00, 2030.56it/s]\n"
+      "100%|██████████| 104999/104999 [00:51<00:00, 2024.57it/s]\n"
      ]
     }
    ],
@@ -426,6 +440,7 @@
     "# save label to train folder\n",
     "train_label_path = join(root_path, \"train\\\\class_label\")\n",
     "for i in tqdm(range(rows - folder_size[\"images_012\"])):\n",
+    "    if exists(join(train_label_path,img_name + \".npy\")): break\n",
     "    one_label = np.zeros(15)\n",
     "    label = img_labels_df.iloc[i,1] # row , col\n",
     "    for class_ in label.split('|'):\n",
@@ -437,14 +452,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7121/7121 [00:03<00:00, 2339.78it/s]\n"
+      "  0%|          | 0/7121 [00:00<?, ?it/s]\n"
      ]
     }
    ],
@@ -452,6 +467,7 @@
     "# save label to test folder\n",
     "test_label_path = join(root_path, \"test\\\\class_label\")\n",
     "for i in tqdm(range(rows - folder_size[\"images_012\"], rows)):\n",
+    "    if exists(join(test_label_path,img_name + \".npy\")): break\n",
     "    one_label = np.zeros(15)\n",
     "    label = img_labels_df.iloc[i,1] # row , col\n",
     "    for class_ in label.split('|'):\n",
@@ -459,6 +475,71 @@
     "\n",
     "    img_name = img_labels_df.iloc[i,0]\n",
     "    np.save(join(test_label_path,img_name), one_label)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from torch.utils.data import Dataset\n",
+    "from torchvision import datasets\n",
+    "from torchvision.transforms import ToTensor\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "\n",
+    "training_data = datasets.FashionMNIST(\n",
+    "    root=\"data\",\n",
+    "    train=True,\n",
+    "    download=True,\n",
+    "    transform=ToTensor()\n",
+    ")\n",
+    "\n",
+    "test_data = datasets.FashionMNIST(\n",
+    "    root=\"data\",\n",
+    "    train=False,\n",
+    "    download=True,\n",
+    "    transform=ToTensor()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['T-shirt/top',\n",
+       " 'Trouser',\n",
+       " 'Pullover',\n",
+       " 'Dress',\n",
+       " 'Coat',\n",
+       " 'Sandal',\n",
+       " 'Shirt',\n",
+       " 'Sneaker',\n",
+       " 'Bag',\n",
+       " 'Ankle boot']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for npy_label in os.listdir(test_label_path):\n",
+    "    np.load(join(test_label_path, npy_label))"
    ]
   }
  ],
